# rust-contract-template

./: Cargo.toml  Makefile  README.md  build.rs  build.sh  call_from_sol_sol_CallRust.evm  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
src/: contract_no_alloc.rs  main.rs
