[package]
name = "rust-contract-template"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "contract"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1

[dependencies]
polkavm-derive = { version = "0.19.0" }
uapi = { package = "pallet-revive-uapi", git = "https://github.com/paritytech/polkadot-sdk.git", rev = "d62a90c8c729acd98c7e9a5cab9803b8b211ffc5", default-features = false }
